<resources>
    <string name="app_name">Neighbors</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm">Are you sure to delete this neighbor ?</string>
    <string name="hint_address">Address</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_website">Website</string>
    <string name="hint_about">About me</string>
    <string name="save">Save</string>
    <string name="hint_image">Image</string>
    <string name="add_neighbor">Add neighbor</string>
    <string name="neighbor_added">Successfully added</string>
    <string name="neighbors">Neighbors list</string>
    <string name="fill_all_text_fields">You have to fill each text fields</string>
    <string name="validation_phone">The format should be 0X XX XX XX XX XX</string>
    <string name="validation_required">This field is required</string>
    <string name="validation_web_url">This field should be a valid URL</string>
    <string name="validation_max_charac_30">This field should contains 30 characters max</string>
    <string name="settings">Settings</string>
    <string name="in_memory">Memory</string>
    <string name="in_database">Database</string>
    <string name="ajouter_aux_favoris">Add in your favorite</string>
    <string name="retirer_des_favoris">Retirer des favoris</string>
</resources>