<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.NeighborDetailsFragment"
    android:padding="24dp">

    <ImageView
        android:id="@+id/neighbor_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/neighbor_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:hint="@string/hint_name"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/neighbor_img" />

    <TextView
        android:id="@+id/neighbor_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_address"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/neighbor_fullname" />

    <TextView
        android:id="@+id/neighbor_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_about"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/neighbor_address" />

    <TextView
        android:id="@+id/neighbor_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_website"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/neighbor_about" />

    <TextView
        android:id="@+id/neighbor_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_phone"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/neighbor_website" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_to_favorite"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/ajouter_aux_favoris"
        app:layout_constraintTop_toBottomOf="@id/neighbor_phone"
        app:cornerRadius="24dp"
        android:layout_marginTop="24dp">

    </com.google.android.material.button.MaterialButton>



</androidx.constraintlayout.widget.ConstraintLayout>